[package]
name = "psi_exporter"
version = "0.1.0"
authors = ["Ivan Babrou <psi_exporter@ivan.computer>"]
edition = "2018"

[dependencies]
clap = "2"
walkdir = "2"
tiny_http = "0.8"
maplit = "1.0"

[dev-dependencies]
simplelog = "0.7.1"

[dependencies.psi]
version = "0.1"
default-features = false

[dependencies.prometheus]
version = "0.7"
default-features = false

[profile.release]
lto = true
